# taco

./: .gitignore  CMakeLists.txt  Dockerfile  benchmark_runner.py  cpp_taco_MTTKRP.json  cpp_taco_SDDMM.json  cpp_taco_SpMM.json  cpp_taco_spmm.json  cpp_taco_spmv.json  cpp_taco_ttv.json  download_frostt.sh  download_suitesparse.sh  env_setup.sh  extract.sh  grpc_install.sh  hardcoded-runner-hypermapper.py  hardcoded-runner-taco.py  hardcoded-runner.py  run-apptainer.sh  run_apptainer_hypermapper.sh  run_taco.sh
.cache/clangd/index/: argparse.hpp.956877F0B0933D2B.idx  array.cpp.FC19C67B73AF12EE.idx  array.h.5514340702C8E5DC.idx  codegen.cpp.83BC27A3A4A41A18.idx  codegen.h.5F284E08C8ACE9CF.idx  codegen_c.cpp.3B3A059549A9C2CF.idx  codegen_c.h.00FB94B757148A6A.idx  codegen_cuda.cpp.C3B2FE8B795EF729.idx  codegen_cuda.h.A042DC30722A1393.idx  collections.h.1B92567C723E6FB8.idx  comparable.h.5ABF8860C297FC6A.idx  component.h.6D409957B6B8A02B.idx  coordinate.h.6C7295B3CA11F46E.idx  coordinate.h.B1202D15276B7F98.idx  cuda.cpp.796EE9C25A10A265.idx  cuda.h.B1D64A44A4156D78.idx  distribution.h.A4A470659614789B.idx  einsum_parser.cpp.31A410519CEB3823.idx  einsum_parser.h.8C9B4272E004623F.idx  env.cpp.8E1143A540DF74A8.idx  env.h.6C74C2CB5B1579AE.idx  error.cpp.19AB6879E4B9CE00.idx  error.h.D7FEB7872743437C.idx  error_checks.cpp.9999698E31F871C1.idx  error_checks.h.AC27D8976DEAF464.idx  error_messages.cpp.A1BB45C63AA2EFFE.idx  error_messages.h.017AF37F7C75F159.idx  expr_factory.cpp.0DF42CA41D9658CD.idx  expr_factory.h.FCF773F076B050E9.idx  expr_tools.cpp.3DF0F9638469AF01.idx  expr_tools.h.8B68931FA4782D77.idx  file_io_mtx.cpp.B470A76508BC290E.idx  file_io_mtx.h.10ADB1987B079CCF.idx  file_io_rb.cpp.1FDB23E373A44787.idx  file_io_rb.h.F30DED8E8FDE5FF0.idx  file_io_tns.cpp.D6EA6C88A7E4B9B2.idx  file_io_tns.h.98E77940F246F5A1.idx  files.cpp.6DC916CE99C52068.idx  files.h.5CE13B01BCA721F0.idx  fill.h.E91C36CBBC37FA88.idx  (+168 more)
apps/: CMakeLists.txt
apps/small_test/: CMakeLists.txt  README.md  small_test.cpp
apps/taco_dse/: CMakeLists.txt  backup_hypermapper_taco_client.cpp  config_service.proto  hypermapper_taco_client.cpp  hypermapper_taco_client.h  run.sh  taco_helper.h
apps/taco_dse/argparse/: argparse.hpp
apps/taco_dse/backup/: backup_taco_helper.h
apps/transformer_taco/: CMakeLists.txt
apps/transformer_taco/src/transformer/: attention.h  common.h  decoder.h  decoder_block.h  dropout.h  encoder.h  feed_forward.h  layer.h  layer_norm.h  linear.h  module_list.h  position_encoding.h  relu.h  sequential.h  softmax.h  test-layers.cpp  test-relu.cpp  test.py  transformer.h  transformer_block.h  transformer_test.cpp
include/taco/: format.h  tensor.h  type.h
include/taco/index_notation/: index_notation.h
include/taco/ir/: ir.h
include/taco/lower/: iterator.h  lower.h  lowerer_impl.h  lowerer_impl_imperative.h
include/taco/util/: timers.h
src/: tensor.cpp  type.cpp
src/codegen/: module.cpp
src/index_notation/: index_notation.cpp  transformations.cpp
src/ir/: ir.cpp
src/lower/: iterator.cpp  lower.cpp  lowerer_impl_imperative.cpp  mode_format_compressed.cpp
src/storage/: file_io_mtx.cpp
test/: test.cpp  test.h  tests-scheduling-eval.cpp
